# chat-with-js

./: .gitignore  Cargo.toml
src/: main.rs  utils.rs
src/resolve/: entry.rs  mod.rs
src/resolve/import/: mod.rs  node_modules.rs  relative.rs  tsconfig.rs
src/utils/: find_path.rs  mod.rs
tests/nest/: index.ts
tests/nest/composables/: index.ts
tests/nest/composables/parse_output/: index.test.ts  index.ts
tests/nest/composables/prompt/: index.ts
tests/nm/: package.json  pnpm-lock.yaml
tests/nm/src/: index.ts
tests/relativePath/: index.ts
tests/tsconfig/: tmp.json  tsconfig.json  tsconfig1.json
tests/tsconfig/src/: index.ts  isEven.ts
