[package]
name = "llm-local"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] } 
regex = "1.5"  # 用于解析 import 语句